[package]
name = "lifx"
version = "0.3.2"
authors = ["Jess H"]
description = "Utilities for controlling your LIFX bulbs"
repository = "https://github.com/turtlekingster/lifx"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

[workspace]
members = [
    "lifx-core",
    "examples/multizone_test",
    "examples/waveform_test",
    "utils/get_all_info",
    "xtask",
]

[lib]

[dependencies]
lifx-core = {path =  "./lifx-core"}
get_if_addrs = "0.5.0"
failure = "0.1.8"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }